name:                bndtools-manual-site
version:             0.1.0.0
synopsis:            Manual for Bndtools
homepage:            http://bndtools.org/
author:              Neil Bartlett
maintainer:          njbartlett@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable bndtools.manual
  main-is:             site.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7, pandoc >=1.12, hakyll >=4.5 && <4.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
